# jormungandr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
assets/data/: periodic_table.csv  pt.json
cmake/: ConfigurePlist.cmake  Info.plist.in
engine/battery/: ocv_curves.hpp  spm.hpp
engine/chem/: electron_config.hpp  element.hpp  element_data.hpp  element_loader.hpp  periodic_table.hpp  periodic_table_tensor.hpp
include/honeycomb/chem/: csv_loader.hpp  element.hpp  molecule.hpp  periodic_table.hpp  periodic_table_tensor.hpp  reaction.hpp
include/honeycomb/ecs/component/: cortical_column.hpp  element_ref.hpp  ion.hpp  molecule.hpp  neuron.hpp
scripts/: package_production.sh  preprocess_chem_data.py
src/: Honeycomb.cpp  Honeycomb.hpp  app_metal.mm  main.cpp  main.mm
src/engine/data/: PeriodicTable.cpp  PeriodicTable.hpp  pt_data.hpp.in
src/engine/ecs/: Components.hpp  ElementComponents.hpp
src/engine/gfx/: MeshFactory.hpp
src/engine/math/: Mat4.hpp
src/engine/render/: RenderPrimitives.hpp
src/engine/scene/: Scene.hpp  SceneBuilder.hpp
src/engine/species/: Entities.hpp
src/honeycomb/chem/: csv_loader.cpp  periodic_table_tensor.cpp  reaction.cpp
